Actualización: nuevas imágenes, estructura y mejoras en auto-gallery2

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
             "index": "src/index.html",
             "browser": "src/main.ts",
             "outputPath": "dist/demo",
+			"baseHref": "/marco-autos/",
             "polyfills": ["zone.js"],
             "scripts": [],
             "styles": ["src/global_styles.css"],
